syntax = "proto3";

package fullnode;

import "google/protobuf/timestamp.proto";

option go_package = "blockchainnetwork/fullnode/proto";

message Block {
    uint64 index = 1;
    bytes prev_hash = 2;
    google.protobuf.Timestamp timestamp = 3;
    uint64 nonce = 4;
    string data = 5;
}

message GetBlocksRequest {
    uint64 first_block_index = 1;
}

message GetBlocksResponse {
    repeated Block blocks = 1;
}

message AppendBlocksRequest {
    repeated Block blocks = 1;
}

message AppendBlocksResponse {
    uint64 last_block_hash = 1;
    bool success = 2;
}

message GetLastBlockRequest {}

message GetLastBlockResponse {
    Block last_block = 1;
}

service FullNode {
    rpc GetBlocks(GetBlocksRequest) returns (GetBlocksResponse);
    rpc AppendBlocks(AppendBlocksRequest) returns (AppendBlocksResponse);
    rpc GetLastBlock(GetLastBlockRequest) returns (GetLastBlockResponse);
}
